DataCloudVirtualization/objects/DC_Integration_Query_Fields__c.object
<CustomObject>
    <fields>
        <fullName>DC_Integration_Query_Configuration__c</fullName>
        <label>DC Integration Query Configuration</label>
        <referenceTo>DC_Integration_Query_Configuration__c</referenceTo>
        <relationshipLabel>DC Integration Query Fields</relationshipLabel>
        <relationshipName>DC_Integration_Query_Fields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Detail_View_Order__c</fullName>
        <description>It should be used if the field should be displayed in record detail View</description>
        <inlineHelpText>Specify the Order In which the Fields to be displayed in Detail View</inlineHelpText>
        <label>Detail View Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Api_Name__c</fullName>
        <label>Field Api Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Data_Type__c</fullName>
        <label>Field Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>text</fullName>
                </value>
                <value>
                    <fullName>button</fullName>
                </value>
                <value>
                    <fullName>date</fullName>
                </value>
                <value>
                    <fullName>number</fullName>
                    <label>Number</label>
                </value>
                <value>
                    <fullName>phone</fullName>
                </value>
                <value>
                    <fullName>currency</fullName>
                </value>
                <value>
                    <fullName>email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_Label__c</fullName>
        <label>Field Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_List_View_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Please check this if this field needs to be displayed in List View</description>
        <inlineHelpText>Please check this if this field Should be displayed in List View and use the List View to specify the Order</inlineHelpText>
        <label>Is List View Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ListViewOrder__c</fullName>
        <inlineHelpText>Specify the order in which the Fields to be displayed in the List View</inlineHelpText>
        <label>List View Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TypeAttributes__c</fullName>
        <label>TypeAttributes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DC Integration Query Fields</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DC Integration Query Fields Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DC Integration Query Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>